		in FloatVectorSpecies
	Changed the variable outOfRangeRetries to outOfBoundsRetries in FloatVectorSpecies
	Added Evolve.primeGenerator() to prime the Mersenne Twister a bit.  MT's first
		624 numbers are generated using a simple linear congruential generator.
		Only after that does MT go through its first iteration.  Priming the
		generator pushes it through two iterations to guarantee more randomness.
		This is almost certainly cargo cult programming -- those first 624 numbers
		are generally reasonably good, but it doesn't hurt, so we're doing it.  Also
		modified locations in ECJ which create new MersenneTwisterFast objects to
		call Evolve.primeGenerator() whenever they do so.
	Reindented

21	Prerelease?  What Prerelease?
	Improvement on ParameterDatabase's error messages regarding classes missing
		no-argument (default) constructors, so they're indicated as such and not as
		"interfaces" or "abstract classes".  Thanks to J. Alejandro Zepada Cortes
		<jalejandrozepedac@gmail.com>
	Deleted some print junk in coevolve2
	Changed Fitness.trials to an ArrayList pointer
	Modified CompetitiveEvaluator.evalSingleElimination to consider ties so we don't
		have to.
	Addition of context to Fitness, and several new methods and revisions in Fitness,
		Individual, and Job which should make distributed evaluation work 
		propertly with coevolution.	
	Updated coevolve1 to revised approach
	Removed vestigial 'birthday' in Individual
	Modifications to coevolve2 to keep trial #0 as the "best" trial
	Manual updated to reflect new coevolution mechanism
	CoevolutionaryDoubleVectorIndividual deleted
	Bug fixes to MultiPopCoevolutionaryEvaluator
	Bug fix in Fitness.bestTrial would only work properly if trial values were positive
	Added Sum to ECSuite
	Deleted CoevolutionaryRosenbrock
	Modified CoevolutionaryECSuite to use Double.NEGATIVE_INFINITY rather than
		Double.MIN_VALUE
	Modifications to coevolve2/ecsuite.params to make parameters equivalent to
		ecsuite/ecsuite.params